<resources>
    <string name="app_name">Privacy Keyboard</string>
    <string name="mykeyboard">MyKeyboard</string>
    <string name="enable_privacy_keyboard">Enable Privacy Keyboard</string>
    <string name="no_recent_emoji_found">No Recent Emoji Found.</string>
    <string name="smiley">😀</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="btn_z">Z</string>
    <string name="btn_x">X</string>
    <string name="btn_c">C</string>
    <string name="btn_v">V</string>
    <string name="btn_b">B</string>
    <string name="btn_n">N</string>
    <string name="btn_m">M</string>
    <string name="btn_a">A</string>
    <string name="btn_s">S</string>
    <string name="btn_d">D</string>
    <string name="btn_f">F</string>
    <string name="btn_g">G</string>
    <string name="btn_h">H</string>
    <string name="btn_j">J</string>
    <string name="btn_k">K</string>
    <string name="btn_l">L</string>
    <string name="btn_q">Q</string>
    <string name="btn_w">W</string>
    <string name="btn_e">E</string>
    <string name="btn_r">R</string>
    <string name="btn_t">T</string>
    <string name="btn_y">Y</string>
    <string name="btn_u">U</string>
    <string name="btn_i">I</string>
    <string name="btn_o">O</string>
    <string name="btn_p">P</string>
    <string name="btn_minus">-</string>
    <string name="btn_underscore">_</string>
    <string name="btn_plus">+</string>
    <string name="btn_tilde">~</string>
    <string name="btn_colon">:</string>
    <string name="btn_semicolon">;</string>
    <string name="btn_slash">/</string>
    <string name="btn_exclamation">!</string>
    <string name="btn_at">&#64;</string>
    <string name="btn_hash">#</string>
    <string name="btn_dollar">$</string>
    <string name="btn_percent">%</string>
    <string name="btn_ampersand">&amp;</string>
    <string name="btn_asterisk">*</string>
    <string name="btn_left_paren">(</string>
    <string name="btn_right_paren">)</string>
    <string name="btn_question">?</string>
    <string name="btn_apostrophe">\'</string>
    <string name="btn_quote">\"</string>
    <string name="btn_special_keys">!?</string>
    <string name="btn_comma">,</string>
    <string name="btn_space">Space</string>
    <string name="btn_dot">.</string>
    <string name="recent_emoji">🕗</string>
    <string name="smiley_and_people">😀</string>
    <string name="animal">🐶</string>
    <string name="food">🍎</string>
    <string name="sport">⚽</string>
    <string name="objects">📱</string>
    <string name="symbol">❤️</string>
    <string name="flag">🇮🇳</string>
    <string name="back_space">⌫</string>
    <string name="normal_mode_text">abc</string>

    <!-- Accessibility content descriptions -->
    <string name="btn_settings">⚙</string>
    <string name="cd_caps_lock">Caps Lock</string>
    <string name="cd_backspace">Backspace</string>
    <string name="cd_enter">Enter</string>
    <string name="cd_space">Space</string>
    <string name="cd_comma">Comma</string>
    <string name="cd_dot">Period</string>
    <string name="cd_emoji">Open emoji picker</string>
    <string name="cd_special_keys">Switch to special characters</string>
    <string name="cd_btn_q">Letter Q</string>
    <string name="cd_btn_w">Letter W</string>
    <string name="cd_btn_e">Letter E</string>
    <string name="cd_btn_r">Letter R</string>
    <string name="cd_btn_t">Letter T</string>
    <string name="cd_btn_y">Letter Y</string>
    <string name="cd_btn_u">Letter U</string>
    <string name="cd_btn_i">Letter I</string>
    <string name="cd_btn_o">Letter O</string>
    <string name="cd_btn_p">Letter P</string>
    <string name="cd_btn_a">Letter A</string>
    <string name="cd_btn_s">Letter S</string>
    <string name="cd_btn_d">Letter D</string>
    <string name="cd_btn_f">Letter F</string>
    <string name="cd_btn_g">Letter G</string>
    <string name="cd_btn_h">Letter H</string>
    <string name="cd_btn_j">Letter J</string>
    <string name="cd_btn_k">Letter K</string>
    <string name="cd_btn_l">Letter L</string>
    <string name="cd_btn_z">Letter Z</string>
    <string name="cd_btn_x">Letter X</string>
    <string name="cd_btn_c">Letter C</string>
    <string name="cd_btn_v">Letter V</string>
    <string name="cd_btn_b">Letter B</string>
    <string name="cd_btn_n">Letter N</string>
    <string name="cd_btn_m">Letter M</string>
</resources>