<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="10"
    android:gravity="center">

    <Button
        android:id="@+id/btnQ"
        android:clickable="true"
        android:focusable="true"
        style="@style/btnLightTheme"
        android:layout_weight="1"
        android:text="@string/btn_q" />

    <Button
        android:id="@+id/btnW"
        android:clickable="true"
        android:focusable="true"
        style="@style/btnLightTheme"
        android:layout_weight="1"
        android:text="@string/btn_w" />

    <Button
        android:id="@+id/btnE"
        android:clickable="true"
        android:focusable="true"
        style="@style/btnLightTheme"
        android:layout_weight="1"
        android:text="@string/btn_e" />

    <Button
        android:id="@+id/btnR"
        android:clickable="true"
        android:focusable="true"
        style="@style/btnLightTheme"
        android:layout_weight="1"
        android:text="@string/btn_r" />

    <Button
        android:id="@+id/btnT"
        android:clickable="true"
        android:focusable="true"
        style="@style/btnLightTheme"
        android:layout_weight="1"
        android:text="@string/btn_t" />

    <Button
        android:id="@+id/btnY"
        android:clickable="true"
        android:focusable="true"
        style="@style/btnLightTheme"
        android:layout_weight="1"
        android:text="@string/btn_y" />

    <Button
        android:id="@+id/btnU"
        android:clickable="true"
        android:focusable="true"
        style="@style/btnLightTheme"
        android:layout_weight="1"
        android:text="@string/btn_u" />

    <Button
        android:id="@+id/btnI"
        android:clickable="true"
        android:focusable="true"
        style="@style/btnLightTheme"
        android:layout_weight="1"
        android:text="@string/btn_i" />

    <Button
        android:id="@+id/btnO"
        android:clickable="true"
        android:focusable="true"
        style="@style/btnLightTheme"
        android:layout_weight="1"
        android:text="@string/btn_o" />

    <Button
        android:id="@+id/btnP"
        android:clickable="true"
        android:focusable="true"
        style="@style/btnLightTheme"
        android:layout_weight="1"
        android:text="@string/btn_p" />

</LinearLayout>
