<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="10"
    android:gravity="center">

    <!-- Caps Lock Btn with weight 1.5 -->
    <include
        android:id="@+id/capsLock"
        layout="@layout/caps_lock_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5" />

    <!-- Buttons with equal weight -->
    <Button
        android:id="@+id/btnZ"
        android:clickable="true"
        android:focusable="true"
        style="@style/btnLightTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/btn_z" />

    <Button
        android:id="@+id/btnX"
        style="@style/btnLightTheme"
        android:layout_width="0dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/btn_x" />

    <Button
        android:id="@+id/btnC"
        style="@style/btnLightTheme"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/btn_c" />

    <Button
        android:id="@+id/btnV"
        style="@style/btnLightTheme"
        android:layout_width="0dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/btn_v" />

    <Button
        android:id="@+id/btnB"
        style="@style/btnLightTheme"
        android:layout_width="0dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/btn_b" />

    <Button
        android:clickable="true"
        android:focusable="true"
        android:id="@+id/btnN"
        style="@style/btnLightTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/btn_n" />

    <Button
        android:id="@+id/btnM"
        android:clickable="true"
        android:focusable="true"
        style="@style/btnLightTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/btn_m" />

    <!-- BackSpace Btn with weight 1.5 -->
    <include
        android:id="@+id/backSpace"
        layout="@layout/back_space_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5" />

</LinearLayout>
